crates/ruma-common/tests/identifiers/ui/02-invalid-id-macros.stderr
error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:2:13
  |
2 |     let _ = ruma_common::event_id!("39hvsi03hlne:example.com");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid event id
  = note: this error originates in the macro `ruma_common::event_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:3:13
  |
3 |     let _ = ruma_common::event_id!("acR1l0raoZnm60CBwAVgqbZqoO/mYU81xysh1u7XcJk");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid event id
  = note: this error originates in the macro `ruma_common::event_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:4:13
  |
4 |     let _ = ruma_common::mxc_uri!("");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid mxc://
  = note: this error originates in the macro `ruma_common::mxc_uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:5:13
  |
5 |     let _ = ruma_common::room_alias_id!("alias:server.tld");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid room_alias_id
  = note: this error originates in the macro `ruma_common::room_alias_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:6:13
  |
6 |     let _ = ruma_common::room_id!("1234567890:matrix.org");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid room_id
  = note: this error originates in the macro `ruma_common::room_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:7:13
  |
7 |     let _ = ruma_common::room_version_id!("");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid room_version_id
  = note: this error originates in the macro `ruma_common::room_version_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:8:13
  |
8 |     let _ = ruma_common::server_name!("");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid server_name
  = note: this error originates in the macro `ruma_common::server_name` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:9:13
  |
9 |     let _ = ruma_common::user_id!("user:ruma.io");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid user_id
  = note: this error originates in the macro `ruma_common::user_id` (in Nightly builds, run with -Z macro-backtrace for more info)
